# cpp-gnu-autotools-netbeans-plugin

./: .gitignore  MainPage.md  ProjectHome.md  README.md  autotools_install.md  build.xml  buildFromSource.md  genCPrjTut.md  manifest.mf
cpp_projects/Autotools_Templates/foobar-cpp/: Makefile.am  configure.ac  libtool
cpp_projects/Autotools_Templates/foobar-cpp/src/: Makefile.am  main.cpp
cpp_projects/Autotools_Templates/foobar-sample/: Makefile.am  configure.ac
cpp_projects/Autotools_Templates/foobar-sample/src/: Makefile.am  main.c
cpp_projects/aclocal_runnable/: Makefile  main.cpp
cpp_projects/aclocal_runnable/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-ReleaseX64.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-ReleaseX64.bash  configurations.xml  project.xml
cpp_projects/autoconf_runnable/: Makefile  main.cpp
cpp_projects/autoconf_runnable/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-ReleaseX64.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  Package-ReleaseX64.bash  configurations.xml  project.xml
cpp_projects/autoheader_runnable/: Makefile  main.cpp
cpp_projects/autoheader_runnable/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  (+7 more)
cpp_projects/automake_runnable/: Makefile  main.cpp
cpp_projects/clean_autotools_runnable/: Makefile  main.cpp
cpp_projects/configure_runnable/: Makefile  main.cpp
cpp_projects/libtoolize_runnable/: Makefile  main.cpp
cpp_projects/runnableCommon/: execute_stream.cpp  execute_stream.h
nbproject/: build-impl.xml  genfiles.properties  platform.properties  project.properties  project.xml
nbproject/private/: keystore  platform-private.properties
release/: aclocal64bit_runnable  aclocal_runnable  autoconf64bit_runnable  autoconf_runnable  autoheader64bit_runnable  autoheader_runnable  automake_runnable  clean_autotools64bit_runnable  clean_autotools_runnable  configure64bit_runnable  configure_runnable  libtoolize64bit_runnable  libtoolize_runnable
(+76 files in other folders)
