## Process this file with automake to produce Makefile.in

## Created by Netbeans

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = ${[REPLACE-GNU-AUTOCREATOR]}

${[REPLACE-GNU-AUTOCREATOR]}_SOURCES = \
	main.c

${[REPLACE-GNU-AUTOCREATOR]}_LDFLAGS = 

${[REPLACE-GNU-AUTOCREATOR]}_LDADD = 

